--- a/templates/index.html
+++ b/templates/index.html
@@ -19,5 +19,6 @@
 {#% load django_tables2 %}
 {#% render_table table %}
 -->
-<iframe src="/fs/list/" widhth="800px" height="400px" border="0"></iframe>
+<br/>
+<iframe id="filelist" src="/fs/list/" width="800px" height="600px" frameborder="0"></iframe>
 {%endblock%}
