--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,21 @@
 
 {%block content%}
 {% load static %}
+  <h3>로그 파일 업로더</h3>
+  <br>
+  <form enctype='multipart/form-data' action="/fs/upload/" method='POST' class="dropzone dz" id="my-dropzone" >
+      {% csrf_token %}
+      <div class="fallback">
+        <input name="file" type="file" multiple />
+      </div>
 
-<h3>로그 파일 업로더</h3>
-<br>
-
-<form enctype='multipart/form-data' action="/fs/upload/" method='POST' class="dropzone dz" id="my-dropzone" >
-    {% csrf_token %}
-    <div class="fallback">
-      <input name="file" type="file" multiple />
+      <div class="input-group input-group-sm mb-3">
+        <span class="input-group-text" id="inputGroup-sizing-sm">Tags:</span>
+        <input type="text" class="form-control form-control-sm" name="tags_in" value="{{ form.tags_in.value }}" maxlength="50" placeholder="ex) 쉽야드테스트, P7">
     </div>
-</form>
-<script type="text/javascript" src="{% static '/fsdropzone_main.js' %}"></script>
-
-<!--
-<h3>Files</h3>
-{#% load django_tables2 %}
-{#% render_table table %}
--->
-<br/>
-<iframe id="filelist" src="/fs/list/" width="800px" height="600px" frameborder="0"></iframe>
+  </form>
+  <script type="text/javascript" src="{% static '/fsdropzone_main.js' %}"></script>
+  <br/>
+  <iframe id="filelist" src="/fs/list/" width="1000px" height="600px" frameborder="0" onload="resizeIframe(this);"></iframe>
+  <div style="height:20px"></div>
 {%endblock%}
