--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     <title>PlayLog File Manager| {% block title %}{% endblock title %}</title>
   </head>
   <body>
-    <div></div>
+    <div style="height:10px"></div>
     <div class="container">
         {% block content %}
         {% endblock content %}
