--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+{% include "navi.html" %}
 <div  class="row" style="height:10px"></div>
 <div class="row g-0">
   <div class="col-4">
@@ -24,4 +25,5 @@
   </div>
 </div>
 <div  class="row" style="height:20px"></div>
+{% include "footer.html" %}
 {%endblock%}
